finished lab5
